Added implementations to the findById function, as well as added implementation to the add function. These functions are located in classrepo.js. No files were added or removed. Both unit tests passed

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/kevinthorley/csi-280-2016sp-project01#readme",
   "dependencies": {
     "should": "^8.1.1"
+  },
+  "devDependencies": {
+    "should": "^8.2.1"
   }
 }
