--- a/java/pom.xml
+++ b/java/pom.xml
@@ -2,6 +2,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <build>
+ <plugins>
+ <plugin>
+   <artifactId>maven-compiler-plugin</artifactId>
+   <version>2.3.2</version>
+   <configuration>
+     <source>1.6</source>
+     <target>1.6</target>
+   </configuration>
+ </plugin>
+  </plugins>
+ </build>
+
   <groupId>com.kevinthorley.csi280</groupId>
   <artifactId>project01</artifactId>
   <version>1.0-SNAPSHOT</version>
